--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
   "name": "solid-start-socket.io",
-  "scripts": {
-    "dev": "solid-start dev",
-    "build": "solid-start build",
-    "start": "solid-start start"
-  },
   "type": "module",
-  "devDependencies": {
-    "solid-start-node": "^0.3.6",
-    "vite": "^4.4.9"
+  "scripts": {
+    "dev": "vinxi dev",
+    "build": "vinxi build",
+    "start": "vinxi start"
   },
   "dependencies": {
-    "@solidjs/meta": "^0.28.6",
-    "@solidjs/router": "^0.8.3",
-    "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2",
-    "solid-js": "^1.7.12",
-    "solid-start": "^0.3.6"
+    "@solidjs/meta": "^0.29.2",
+    "@solidjs/router": "^0.12.4",
+    "@solidjs/start": "^0.5.9",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
+    "solid-js": "^1.8.15",
+    "vinxi": "^0.2.1"
   },
   "engines": {
     "node": ">=18"
